# Logic-Simulator

./: CMakeLists.txt  CMakelists.txt  README.md
headers/: AND_gate.h  Gate.h  NOR_Gate.h  Nand.h  Node.h  OR_Gate.h  Simulator.h
include/: AND_gate.h  Gate.h  LogicSimulator.h  LogicSimulator_Export.h  NAND_Gate.h  NOT_Gate.h  Nand.h  Node.h  Simulator.h  XNOR_Gate.h  XOR_Gate.h
include/and/: AND_gate.h
include/core/: Gate.h  Node.h
include/nand/: NAND_Gate.h
include/nor/: NOR_Gate.h
include/not/: NOT_Gate.h
include/or/: OR_Gate.h
include/xnor/: XNOR_Gate.h
include/xor/: XOR_Gate.h
spikes/: CMakeLists.txt
src/: And_Gate.cpp  CMakelists.txt  Gate.cpp  LogicSimulator.cpp  NAND_Gate.cpp  NOR_Gate.cpp  NOT_Gate.cpp  Nand.cpp  Node.cpp  OR_Gate.cpp  Simulator.cpp  XNOR_Gate.cpp  XOR_Gate.cpp
src/and/: And_Gate.cpp
src/core/: Gate.cpp  Node.cpp
src/nand/: NAND_Gate.cpp
src/nor/: NOR_Gate.cpp
src/not/: NOT_Gate.cpp
src/or/: OR_Gate.cpp
src/xnor/: XNOR_Gate.cpp
src/xor/: XOR_Gate.cpp
tests/: CMakelists.txt  TestAnd.cpp  TestAndGate.cpp  TestNandGate.cpp  TestNotGate.cpp  TestOrGate.cpp  TestXnorGate.cpp  TestXorGate.cpp  TestnorGate.cpp
tests/acceptances/: CMakeLists.txt
tests/unit-tests/: CMakeLists.txt  TestAndGate.cpp  TestNandGate.cpp  TestNotGate.cpp  TestOrGate.cpp  TestXnorGate.cpp  TestXorGate.cpp  TestnorGate.cpp
